--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fullpage/react-fullpage": "^0.1.19",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-medium-image-zoom": "^5.2.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
